2008-01-24 Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/GSXftFontInfo.m (-setupAttributes): Use
	FC_PIXEL_SIZE instead of FC_SIZE. Fixes #21912.

2008-01-21 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/x11/XGOpenGL.h,
	* Source/x11/XGGLContext.m,
	* Source/x11/XGGLFormat.m: 
	Get to work with newer versions of GLX.
	Patch by Thomas Gamper <icicle@cg.tuwien.ac.at>,
	slightly reworked.
	
2008-01-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m (-setWindowdevice:forContext:):
	Correct wrong parameter name.
	
2008-01-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m: (-setWindowdevice:forContext:),
	* Source/win32/WIN32Server.m (-setWindowdevice:forContext:):
	Method replaces windowdevice:.
	* Source/gsc/GSContext.m,
	* Source/gsc/GSStreamContext.m,
        * Source/art/ARTContext.m,
	* Source/cairo/CairoContext.m,
	* Source/xlib/XGContext.m,
	* Source/winlib/WIN32Context.m (+GStateClass, +handlesPS):
	New methods to simplify the implementation of
	initWithContextInfo:. In that method call
	setWindowdevice:forContext: when the destination is a window.
	* Source/art/ARTContext.m (-setupDrawInfo): New method, code comes
	from old initWithContextInfo:, now called in GSSetDevice:::.
		
2008-01-11 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/XGServerWindow.m:
	Try to find window offsets using off-screen windows unless the
	GSBackChecksOffsetsOnScreen user default is set to YES.

2008-01-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m (-receivedEvent:...forMode:): Add
	#ifdef for Cygwin.

2008-01-01  Adam Fedor  <fedor@gnu.org>

	* Version 0.13.1

2007-12-11 Isaiah Beerbower <public@ipaqah.com>

	* Source/cairo/*
	* Headers/cairo/*
	Reverting back to fontconfig font system.

2007-12-10 Isaiah Beerbower <public@ipaqah.com>

	* Source/cairo/CairoFontEnumerator.m (-enumerateFontsAndFamilies, cacheFolder,
	bundleModificationDate, cacheFont, cacheNFontBundle, mergeFontInfo):